--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -30,8 +30,8 @@ jobs:
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        sudo apt install coreutils sed git build-essential gcc-11 g++-11 lowdown
-        CXX=clang++ LDFLAGS=-fuse-ld=lld cmake -B build -G Ninja -DBTOP_STATIC=ON
+        sudo apt install cmake git g++ ninja-build lowdown
+        CXX=clang++ LDFLAGS=-fuse-ld=lld cmake -B build -G Ninja -DBTOP_STATIC=ON -DBTOP_GPU=false
         cmake --build build --verbose
     - name: Free disk space
       run: |
